--- a/index.html
+++ b/index.html
@@ -10,17 +10,29 @@
     ></script>
   </head>
   <body>
-    
-    <div class="footer">
-      <p>
-        Mohamed Emary
-        <a
-          href="https://github.com/MohamedEmary"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fab fa-github"></i
-        ></a>
-      </p>
+    <header>
+      <div class="header">Etch a Sketch</div>
+    </header>
+
+    <div class="main-container">
+      <div id="options" class="options">
+        <button id="squares-num">Change number of squares in grid</button>
+      </div>
+      <div id="grid" class="grid"></div>
     </div>
+
+    <footer>
+      <div class="footer">
+        <p>
+          Mohamed Emary
+          <a
+            href="https://github.com/MohamedEmary"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github"></i>
+          </a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
