--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/4c536a6bd5.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
     <header>
@@ -16,7 +17,9 @@
 
     <div class="main-container">
       <div id="options" class="options">
-        <button id="squares-num">Change number of squares in grid</button>
+        <button id="squares-num" class="squares-num">
+          Change number of squares in grid
+        </button>
       </div>
       <div id="grid" class="grid"></div>
     </div>
