add website functionality

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <div class="main-container">
       <div id="options" class="options">
-        <button id="squares-num" class="squares-num">
-          Change number of squares in grid
+        <button id="cells-num" class="cells-num">
+          Change number of cells in grid
         </button>
       </div>
       <div id="grid" class="grid"></div>
