implement erase button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button id="cells-num" class="cells-num">
           Change number of cells in grid
         </button>
+        <button id="erase" class="erase">Erase All</button>
       </div>
       <div id="grid" class="grid"></div>
     </div>
